[gd_scene load_steps=5 format=3 uid="uid://d3hekhwgywgrj"]

[ext_resource type="Script" path="res://Menu.gd" id="1_fgv2f"]
[ext_resource type="Texture2D" uid="uid://bjxm34i27ifjw" path="res://Scenes/StartScreen.png" id="1_jo1g8"]
[ext_resource type="Texture2D" uid="uid://xqfkuccsvpk3" path="res://Scenes/Man-Head-Portrait.png" id="3_sdcgo"]
[ext_resource type="Texture2D" uid="uid://de50q0c72gp2y" path="res://Scenes/Dog-Head-Portrait.png" id="4_4mpaf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgv2f")

[node name="StartScreen" type="Sprite2D" parent="."]
position = Vector2(592, 328)
texture = ExtResource("1_jo1g8")

[node name="Limer" type="Sprite2D" parent="StartScreen"]
position = Vector2(-480, -256)
scale = Vector2(1.51961, 1.62941)
texture = ExtResource("4_4mpaf")

[node name="Sprite2D" type="Sprite2D" parent="StartScreen"]
position = Vector2(480, -256)
scale = Vector2(1.46569, 1.61471)
texture = ExtResource("3_sdcgo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Quit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
